// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethod renders correctly 1`] = `
<Memo(Pressable)
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "flexDirection": "row",
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      {
        "borderColor": "#F56522",
        "borderWidth": 1,
      },
      false,
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "flexWrap": "wrap",
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "textTransform": "uppercase",
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    SEPA
  </PeachText>
</Memo(Pressable)>
`;

exports[`PaymentMethod renders correctly when there is a dispute 1`] = `
<Memo(Pressable)
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "flexDirection": "row",
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      {
        "borderColor": "#F56522",
        "borderWidth": 1,
      },
      {
        "borderColor": "#FE5A48",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "flexWrap": "wrap",
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "textTransform": "uppercase",
        },
        {
          "color": "#FE5A48",
        },
      ]
    }
  >
    Revolut
  </PeachText>
  <Icon
    color="#FE5A48"
    id="externalLink"
    style={
      {
        "height": 12,
        "marginLeft": 4,
        "width": 12,
      }
    }
  />
</Memo(Pressable)>
`;

exports[`PaymentMethod renders correctly when there is a link 1`] = `
<Memo(Pressable)
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "flexDirection": "row",
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      {
        "borderColor": "#F56522",
        "borderWidth": 1,
      },
      false,
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "flexWrap": "wrap",
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "textTransform": "uppercase",
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    Revolut
  </PeachText>
  <Icon
    color="#F56522"
    id="externalLink"
    style={
      {
        "height": 12,
        "marginLeft": 4,
        "width": 12,
      }
    }
  />
</Memo(Pressable)>
`;
